tests/macros/password/choices.stderr
error: option `choices` does not exist for kind `password`
 --> $DIR/choices.rs:2:38
  |
2 |     discourse::questions![Password { choices: todo!() }];
  |                                      ^^^^^^^
