tests/macros/password/choices.rs
fn main() {
    discourse::questions![Password { choices: todo!() }];
}
